chore: prepare 0.27.4 release
